cpp/matching-brackets/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.018s
user	0m0.000s
sys	0m0.018s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/matching-brackets/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/matching-brackets/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/matching-brackets/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/matching-brackets/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/matching-brackets/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/matching-brackets/build'
[ 25%] Building CXX object CMakeFiles/matching-brackets.dir/matching_brackets_test.cpp.o
[ 50%] Building CXX object CMakeFiles/matching-brackets.dir/matching_brackets.cpp.o
[ 75%] Building CXX object CMakeFiles/matching-brackets.dir/test/tests-main.cpp.o
[100%] Linking CXX executable matching-brackets
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/matching-brackets/build'
[100%] Built target matching-brackets
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/matching-brackets/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/matching-brackets/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/matching-brackets/build'
===============================================================================
All tests passed (14 assertions in 14 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/matching-brackets/build'
[100%] Built target test_matching-brackets
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/matching-brackets/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/matching-brackets/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/matching-brackets.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/matching-brackets.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)16251"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
matching_brackets.cpp                         31      31   100%   
matching_brackets_test.cpp                    42      42   100%   
test/catch.hpp                                34      29    85%   1642-1643,2301-2302,2560
------------------------------------------------------------------------------
TOTAL                                        107     102    95%
------------------------------------------------------------------------------
lines: 95.3% (102 out of 107)
branches: 46.0% (126 out of 274)

real	0m10.449s
user	0m9.331s
sys	0m1.124s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.249s
user	0m0.154s
sys	0m0.097s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.337s
user	0m0.171s
sys	0m0.153s

===============================================================================

Running: clang-format-16 -style=file -i ./matching_brackets.cpp ./matching_brackets_test.cpp ./matching_brackets.h

real	0m0.021s
user	0m0.009s
sys	0m0.011s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./matching_brackets.cpp ./matching_brackets_test.cpp ./matching_brackets.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/matching-brackets/matching_brackets.h:6:10: fatal error: 'stack' file not found
#include <stack>
         ^~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/matching-brackets/matching_brackets.h.

real	0m0.559s
user	0m0.515s
sys	0m0.044s


real	0m0.561s
user	0m0.517s
sys	0m0.045s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
12922 warnings generated.
49261 warnings generated.
49261 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/matching-brackets/matching_brackets.h.
Suppressed 49266 warnings (49261 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m7.019s
user	0m6.950s
sys	0m0.068s
Running: clang-tidy-16 ./matching_brackets.cpp ./matching_brackets_test.cpp ./matching_brackets.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/matching-brackets/matching_brackets.h:6:10: error: 'stack' file not found [clang-diagnostic-error]
#include <stack>
         ^~~~~~~


real	0m7.022s
user	0m6.952s
sys	0m0.070s

===============================================================================

